# rust-norn

./: .dockerignore  .env.example  .gitignore  .gitignore-hardhat  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.faucet  Dockerfile.optimized  GEMINI.md  INTEGRATION_TESTS_SUMMARY.md  Makefile  README.md  check-accounts.js  deploy-simple-test.js  docker-compose-testnet.yml  docker-compose.enhanced.yml  docker-compose.faucet.yml  docker-compose.monitoring.yml  docker-compose.yml  faucet.js  faucet_config.toml  hardhat.config.js  llvm-cov.toml  logging.toml  metrics.toml  node1_config.toml  node1_config_local.toml  node2_config.toml  node2_config_local.toml  node3_config_local.toml  package.json  production_config.toml  production_full_config.toml  remix_config.toml  test_config.toml  test_sled_integration.rs
.github/workflows/: ci.yml  release.yml  security.yml
benches/: comprehensive_benchmark.rs  enhanced_features_benchmark.rs
config/: production.toml
contracts/: Ballot.sol  NornToken.sol  QUICKSTART.md  README.md  RemixTest.sol  SimpleStorage.sol
contracts/scripts/: benchmark.js  deploy.js  simple-deploy.js
contracts/test/: E2E.test.js  NornToken.test.js  SimpleStorage.test.js
crates/common/: Cargo.toml  README.md
crates/common/src/: build_mode.rs  error.rs  genesis.rs  lib.rs  traits.rs  types.rs
crates/common/src/utils/: codec.rs  config.rs  converter.rs  db_keys.rs  error_handler.rs  logging.rs  metrics.rs  metrics_server.rs  mod.rs
crates/core/: Cargo.toml  Cargo.toml.bak  README.md
crates/core/benches/: enhanced_features.rs
crates/core/src/: block_buffer.rs  blockchain.rs  config.rs  consensus.rs  data_processor.rs  events.rs  fee.rs  lib.rs  merkle.rs  metrics.rs  txpool.rs  txpool_enhanced.rs  validation.rs  wallet.rs
crates/core/src/consensus/: mod.rs  povf.rs  producer.rs
crates/core/src/evm/: abi.rs  access_list.rs  benchmarks.rs  blockhash.rs  code_storage.rs  eip1559.rs  error.rs  executor.rs  gas.rs  logging.rs  mod.rs  precompiles.rs  real_contracts.rs  receipt.rs  runtime.rs
crates/core/src/execution/: executor.rs  gas.rs  mod.rs  nonce.rs  router.rs
crates/core/src/state/: account.rs  cache.rs  db.rs  history.rs  merkle.rs  mod.rs  persistent.rs  pruning.rs  traits.rs  trie.rs
crates/core/tests/: e2e_full_workflow_test.rs  evm_integration_tests.rs  integration_enhanced_features.rs  pruning_integration_test.rs  test_txpool_simple.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: lib.rs  transaction.rs  vdf.rs
crates/crypto/src/calculator/: mod.rs  tests.rs
crates/crypto/src/ecdsa/: mod.rs
crates/crypto/src/utils/: mod.rs
crates/crypto/src/vrf/: mod.rs  tests.rs
crates/faucet/: Cargo.toml
crates/faucet/src/: api.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  service.rs
crates/faucet/static/: index.html
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  behaviour_builder.rs  compression.rs  config.rs  event_loop.rs  lib.rs  service.rs  topics.rs  transport.rs
crates/network/src/messages/: compression.rs  mod.rs  sync.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: config.rs  lib.rs  logging.rs  manager.rs  metrics.rs  monitoring.rs  service.rs  syncer.rs  tx_handler.rs
crates/node/src/syncer/: fast_sync.rs  mod.rs  reorg_handler.rs  syncer.rs
crates/rpc/: Cargo.toml  README.md  build.rs
crates/rpc/examples/: client.rs  ws_client.js  ws_client.rs
crates/rpc/proto/: blockchain.proto
crates/rpc/src/: ethereum.rs  lib.rs  mapper.rs  rlp_tx.rs  server.rs  websocket.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: lib.rs  recovery.rs  rocks.rs  sled.rs  wal.rs
db_test/: Cargo.toml
db_test/src/: main.rs
deployments/testnet/: HEALTH_CHECK.md  QUICKSTART.md  README.md  benchmark-performance.sh  docker-compose.yml  genesis.json  prometheus.yml  start.sh  stop.sh  test_enhanced_features.sh  test_health_endpoints.sh
docker/: Dockerfile  README.md  docker-compose.yml  logs.sh  start-nodes.sh  stop-nodes.sh  test-network.sh
docker/configs/: node1.toml  node2.toml  node3.toml  node4.toml
docker/scripts/: entrypoint.sh
docs/: API文档.md  PERFORMANCE.md  README.md  SECURITY_AUDIT_REPORT.md  STATE_PRUNING.md  WEBSOCKET.md  开发指南.md  性能优化.md  架构文档.md  测试文档.md  状态剪裁.md
examples/: README.md
examples/javascript/: .env.example  README.md  balance_checker.js  basic_rpc.js  batch_rpc_requests.js  contract_interaction.js  health_check_monitoring.js  package.json  rate_limiting_utilities.js  (+2 more)
examples/rust/: .gitignore  Cargo.toml  README.md
examples/rust/src/: balance_checker.rs  basic_rpc.rs  batch_rpc_requests.rs  contract_interaction.rs  health_check_monitoring.rs  rate_limiting_utilities.rs  transaction_sender.rs  websocket_listener.rs
examples/rust/tests/: integration_tests.rs
monitoring/: prometheus-testnet.yml
scalability_test/: Cargo.toml
scripts/: check-metamask-setup.sh  deploy-contracts.sh  deploy-test.js  performance_analysis.sh  run_tests.sh  setup_enhanced.sh  start-faucet.sh  start-local-nodes-simple.sh  start-local-nodes.sh  start-nodes.sh  start-remix-node.sh  start-testnet.sh  start_enhanced_node.sh  test-faucet.sh  test-remix.sh  test-rpc.sh  test_alerts.sh  test_websocket.sh
test_integration/: Cargo.toml
test_tx_gen/: Cargo.toml
tests/: Cargo.toml  INTEGRATION_TEST_REPORT.md  MIGRATION.md  QUICK_REFERENCE.md  README.md  run_all_tests.sh
tests/e2e/: e2e_full_workflow_test.rs  integration_test.rs  simple_verification.rs  standalone_txpool_test.rs
tests/integration/: Cargo.toml  api_integration_test.rs
tests/integration/src/: main.rs
tests/performance/: performance_enhanced_test.rs
tests/performance/scalability_test/: Cargo.toml
tests/performance/tps_test/: Cargo.toml  build.rs  diagnose.sh  run_tps_test.sh
tests/performance/tps_test/src/: main.rs  rpc_client.rs  statistics.rs
tests/testnet/: basic_test.sh
tests/tools/: Cargo.toml
tests/tools/src/: main.rs
tests/unit/: Cargo.toml  modularity_test.rs
tests/unit/src/: main.rs
tps_test/: QUICKSTART.md  README.md  build.rs  max_tps_benchmark.sh
(+37 files in other folders)
