[package]
name = "norn-common"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true } # Added this line