[package]
name = "norn-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
norn-common = { workspace = true }
norn-core = { workspace = true }
hex = { workspace = true }

[build-dependencies]
tonic-build = "0.11"