[package]
name = "norn-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
norn-common = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11"
tracing = { workspace = true }
sha2 = { workspace = true }
tempfile = "3.8"  # For tests only

[dev-dependencies]
tempfile = "3.8"