[package]
name = "scalability-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scalability-test"
path = "src/main.rs"

[dependencies]
norn-storage = { workspace = true }
norn-common = { workspace = true }
norn-core = { workspace = true }
norn-crypto = { workspace = true }
tokio = { workspace = true }
tempfile = "3.8"
chrono = "0.4"
hex = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }