[package]
name = "tps_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tps_test"
path = "src/main.rs"

[dependencies]
norn-common = { workspace = true }
norn-crypto = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
